@@ -1,0 +1,32 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+
+<schema name="default-config" version="1.6">
+    <uniqueKey>id</uniqueKey>
+    <field name="id" type="string" indexed="true" stored="true" required="true" multiValued="false" />
+    <fieldType name="string" class="solr.StrField" sortMissingLast="true" docValues="true" />
+
+    <field name="_version_" type="plong" indexed="false" stored="false"/>
+    <fieldType name="plong" class="solr.LongPointField" docValues="true"/>
+
+    <fieldType name="booleans" class="solr.BoolField" sortMissingLast="true" multiValued="true"/>
+    <dynamicField name="*_bs" type="booleans" indexed="true" stored="true"/>
+
+    <!-- Used by AddSchemaFieldsUpdateProcessorFactory field type mappings -->
+    <fieldType name="text_general" class="solr.TextField" positionIncrementGap="100" multiValued="true" />
+</schema>
